--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Branin Equation Calculator</title>
+  <title>化工製程</title>
   <style>
     /* CSS 样式 */
     /* 可以添加一些样式來美化你的页面 */
